# sellna.ai

./: .env.example  .gitignore  API_ROUTES.md  README.md  config.py  extractor.py  main.py  out_db.json  out_db.txt  pyproject.toml  qdrant_methods.txt  requirements.txt  scraper.py  scraper_standalone.py  test_db.py  test_db2.py  test_db3.py  test_qdrant.py  verify_fix.py
app/: __init__.py  main.py
app/agents/: __init__.py  cleaning_agent.py  competitor_agent.py  domain_agent.py  gap_analysis_agent.py  icp_agent.py  optimization_agent.py  outreach_agent.py  persona_agent.py  web_agent.py
app/api/: __init__.py  router.py
app/api/v1/: __init__.py  analytics.py  company.py  competitors.py  dashboard.py  icp.py  outreach.py  personas.py  (+2 more)
app/config/: __init__.py  settings.py
app/core/: __init__.py  dependencies.py  logging.py  security.py
app/db/: __init__.py  postgres.py  vector_store.py
app/pipelines/: __init__.py  sales_pipeline.py
app/schemas/: __init__.py  company.py  competitor.py  gap_analysis.py  icp.py  outreach.py  persona.py
app/services/: __init__.py  embedding_service.py  llm_service.py  rag_service.py  scraping_service.py
app/utils/: __init__.py  similarity.py  text_cleaning.py
app/workers/: celery_app.py  tasks.py
docker/: Dockerfile  docker-compose.yml
scrapping_module/: social.py  stealth.py
scrapping_module/engines/: base.py  instagram.py  linkedin.py
static/: index.html  sales_ai.css  sales_ai.html  sales_ai.js
tests/: __init__.py  conftest.py  test_api_company.py  test_domain_agent.py  test_scraping_service.py  test_utils.py
(+1 files in other folders)
